# simd

./: CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  README.md  README.zh-CN.md  justfile
.circleci/: config.yml
.github/workflows/: benchmark.yml  ci.yml
analyze/: Cargo.toml  main.rs
base64-simd/: Cargo.toml
base64-simd/src/: arch.rs  auto.rs  error.rs  ext.rs  fallback.rs  generic.rs  lib.rs  polyfill.rs  tests.rs  utils.rs
benches/: Cargo.toml  analyze.rs  ascii.rs  base32.rs  base64.rs  hex.rs  lib.rs  main.rs  quick.rs  uuid.rs
crates/base32-simd/: Cargo.toml  README.md
crates/base32-simd/src/: alsw.rs  check.rs  common.rs  crockford.rs  decode.rs  encode.rs  error.rs  fallback.rs  heap.rs  lib.rs  multiversion.rs  rfc4648.rs  simd.rs  tests.rs
crates/base32-simd/tests/: it.rs
crates/base64-simd/: Cargo.toml  README.md
crates/base64-simd/src/: alsw.rs  arch.rs  ascii.rs  auto.rs  check.rs  decode.rs  encode.rs  error.rs  ext.rs  fallback.rs  forgiving.rs  generic.rs  heap.rs  lib.rs  multiversion.rs  parallel.rs  rfc4648.rs  simd.rs  spec.rs  tests.rs
crates/base64-simd/tests/: it.rs
crates/hex-simd/: Cargo.toml  README.md  build.rs
crates/hex-simd/src/: arch.rs  auto.rs  check.rs  decode.rs  encode.rs  error.rs  ext.rs  fallback.rs  generic.rs  heap.rs  lib.rs  multiversion.rs  simd.rs  spec.rs  tests.rs
crates/hex-simd/tests/: it.rs  tests.rs
crates/simd-abstraction/: Cargo.toml  README.md
crates/simd-abstraction/src/: ascii.rs  crc32.rs  isa.rs  lib.rs  macros.rs  scalar.rs  tools.rs  traits.rs  vector.rs
crates/simd-abstraction/src/arch/: aarch64.rs  arm.rs  wasm.rs  x86.rs
crates/simd-abstraction/src/arch/x86/: avx2.rs  sse41.rs  sse42.rs
crates/simd-abstraction/src/common/: ascii.rs  base32.rs  bswap.rs  crc32.rs  hex.rs
crates/simd-abstraction/src/isa/: ext.rs  load.rs  mock.rs  mock256.rs  simd128.rs  simd256.rs  simd512.rs
crates/simd-benches/: Cargo.toml
crates/simd-benches/benches/: base64.rs  hex.rs  uuid.rs
crates/simd-benches/src/: lib.rs  main.rs
crates/unicode-simd/: Cargo.toml  README.md
crates/unicode-simd/src/: ascii.rs  lib.rs  multiversion.rs  utf16.rs  utf32.rs
crates/unicode-simd/src/fallback/: utf16.rs  utf32.rs
crates/unicode-simd/src/simd/: utf16.rs  utf32.rs
crates/unicode-simd/tests/: it.rs
crates/uuid-simd/: Cargo.toml  README.md
crates/uuid-simd/src/: auto.rs  error.rs  ext.rs  fallback.rs  format.rs  generic.rs  lib.rs  multiversion.rs  parse.rs  polyfill.rs  simd.rs  spec.rs  tests.rs
crates/uuid-simd/tests/: it.rs
crates/vsimd/: Cargo.toml
crates/vsimd/src/: algorithm.rs  alsw.rs  ascii.rs  base32.rs  base64.rs  bswap.rs  hex.rs  isa.rs  lib.rs  macros.rs  mask.rs  native.rs  pod.rs  scalable.rs  scalar.rs  simd128.rs  simd256.rs  simd64.rs  simulation.rs  table.rs  tools.rs  unified.rs  unstable.rs  vector.rs
crates/vsimd/src/common/: ascii.rs  bswap.rs
crates/vsimd/tests/: it.rs
docs/: base32.md  benches-v050.md
docs/SIMD/: base32.md
hex-simd/: Cargo.toml
hex-simd/benches/: hex.rs
hex-simd/src/: arch.rs  auto.rs  error.rs  ext.rs  fallback.rs  generic.rs  lib.rs  tests.rs
scripts/: analyze.py  base64.js  bench.sh  dump-symbols.py  node-wasi.js  print-env.sh  test.sh  testgen.py
simd-abstraction/: Cargo.toml
simd-abstraction/src/: lib.rs  tools.rs  traits.rs
simd-abstraction/src/arch/: aarch64.rs  arm.rs  wasm.rs  x86.rs
simd-abstraction/src/common/: crc32.rs  hex.rs
simd-benches/: Cargo.toml
simd-benches/benches/: base64.rs  hex.rs  uuid.rs
uuid-simd/: Cargo.toml
uuid-simd/benches/: uuid.rs
uuid-simd/src/: arch.rs  auto.rs  error.rs  ext.rs  fallback.rs  generic.rs  lib.rs  tests.rs
