[package]
name = "simd-benches"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[[bin]]
name = "sb-quick"
path = "quick.rs"

[[bench]]
name = "uuid"
path = "uuid.rs"
harness = false

[[bench]]
name = "hex"
path = "hex.rs"
harness = false

[[bench]]
name = "base64"
path = "base64.rs"
harness = false

[[bench]]
name = "base32"
path = "base32.rs"
harness = false

[features]
default = []
detect = [
    "base32-simd/detect",
    "base64-simd/detect",
    "hex-simd/detect",
    "unicode-simd/detect",
    "uuid-simd/detect",
    "radix64/simd",
]

[dependencies.base32-simd]
path = "../crates/base32-simd"
default-features = false
features = ["std"]

[dependencies.base64-simd]
path = "../crates/base64-simd"
default-features = false
features = ["std"]

[dependencies.hex-simd]
path = "../crates/hex-simd"
default-features = false
features = ["std"]

[dependencies.unicode-simd]
path = "../crates/unicode-simd"
default-features = false
features = ["std"]

[dependencies.uuid-simd]
path = "../crates/uuid-simd"
default-features = false
features = ["std", "uuid"]

[dependencies]
rand = "0.8.5"
uuid = "1.2.1"
const-str = "0.5.2"
faster-hex = "0.6.1"
radix64 = { version = "0.6.2", default-features = false }
base64 = "0.13.1"
hex = "0.4.3"
base16 = "0.2.1"
getrandom = { version = "0.2", features = ["js"] }
base64ct = "1.5.3"
base16ct = "0.1.1"
base32ct = "0.1.0"
data-encoding = "2.3.2"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["real_blackbox"] }
