[package]
name = "hex-simd"
version = "0.5.0-dev"
edition = "2021"
description = "SIMD-accelerated hexadecimal operations"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["hex", "simd"]
categories = ["no-std", "parser-implementations"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "detect"]
std = ["alloc"]
detect = ["simd-abstraction/std"]
alloc = []
unstable = ["simd-abstraction/unstable"]

[dependencies.simd-abstraction]
path = "../simd-abstraction"
version = "0.5.0-dev"

[dev-dependencies]
criterion = "0.3.5"
faster-hex = "0.6.1"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "hex"
harness = false
