[package]
name = "simd-abstraction"
version = "0.5.0-dev"
edition = "2021"
description = "Abstract SIMD instruction sets"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["simd"]
categories = ["no-std"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
unstable = []
