[package]
name = "uuid-simd"
version = "0.5.0-dev"
edition = "2021"
description = "SIMD-accelerated UUID operations"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["uuid", "guid", "simd"]
categories = ["no-std", "parser-implementations"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "detect", "uuid"]
std = []
detect = ["simd-abstraction/std"]
unstable = ["simd-abstraction/unstable"]

[dependencies.uuid]
version = "0.8.2"
optional = true

[dependencies.simd-abstraction]
path = "../simd-abstraction"
version = "0.5.0-dev"

[dev-dependencies.uuid1]
package = "uuid"
git = "https://github.com/uuid-rs/uuid"
rev = "2d6c147bdfca9612263dd7e82e26155f7ef8bf32"

[dev-dependencies]
criterion = "0.3.5"
faster-hex = "0.6.1"
wasm-bindgen-test = "0.3"

[[bench]]
name = "uuid"
harness = false
