[package]
name = "uuid-simd"
version = "0.5.0"
edition = "2021"
description = "SIMD-accelerated UUID operations"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["uuid", "guid", "simd"]
categories = ["no-std", "parser-implementations"]
readme = "../README.md"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "detect", "uuid"]
std = []
detect = ["simd-abstraction/std"]
unstable = ["simd-abstraction/unstable"]

[dependencies.uuid]
version = "0.8.2"
optional = true

[dependencies.simd-abstraction]
path = "../simd-abstraction"
version = "0.5.0"

[dev-dependencies]
faster-hex = "0.6.1"
wasm-bindgen-test = "0.3"

