[package]
name = "base32-simd"
version = "0.1.0-dev"
edition = "2021"
description = "SIMD-accelerated base32 encoding and decoding"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["base32", "simd"]
categories = ["no-std", "parser-implementations", "encoding"]
readme = "README.md"
rust-version = "1.63"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "detect"]
alloc = ["vsimd/alloc"]
std = ["alloc", "vsimd/std"]
detect = ["vsimd/detect"]
unstable = ["vsimd/unstable"]

[dependencies]
outref = "0.3.0"
vsimd = { path = "../vsimd", version = "0.1.0-dev" }

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen-test = "0.3.33"
