[package]
name = "base64-simd"
version = "0.7.0"
edition = "2021"
description = "SIMD-accelerated base64 encoding and decoding"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["base64", "simd"]
categories = ["no-std", "parser-implementations"]
readme = "../../README.md"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "detect"]
std = ["alloc"]
detect = ["simd-abstraction/std"]
alloc = ["simd-abstraction/alloc"]
unstable = ["simd-abstraction/unstable"]

[dependencies.simd-abstraction]
path = "../simd-abstraction"
version = "0.7.0"

[dev-dependencies]
base64 = "0.13.0"
rand = "0.8.5"
faster-hex = "0.6.1"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen-test = "0.3.31"
