[package]
name = "base64-simd"
version = "0.7.0"
edition = "2021"
description = "SIMD-accelerated base64 encoding and decoding"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["base64", "simd"]
categories = ["no-std", "parser-implementations", "encoding"]
readme = "../../README.md"
rust-version = "1.61"

[features]
default = ["std", "detect"]
alloc = ["simd-abstraction/alloc"]
std = ["alloc", "simd-abstraction/std"]
detect = ["simd-abstraction/detect"]
unstable = ["simd-abstraction/unstable"]

[dev-dependencies]
base64 = "0.13.0"
rand = "0.8.5"

[dependencies.simd-abstraction]
path = "../simd-abstraction"
version = "0.7.0"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen-test = "0.3.32"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
