[package]
name = "hex-simd"
version = "0.7.0"
edition = "2021"
description = "SIMD-accelerated hex encoding and decoding"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["hex", "simd"]
categories = ["no-std", "parser-implementations"]
readme = "../../README.md"
rust-version = "1.61"

[features]
default = ["std", "detect"]
alloc = ["simd-abstraction/alloc"]
std = ["alloc", "simd-abstraction/std"]
detect = ["simd-abstraction/detect"]
unstable = ["simd-abstraction/unstable"]

[dev-dependencies]
faster-hex = "0.6.1"
rand = "0.8.5"

[dependencies.simd-abstraction]
path = "../simd-abstraction"
version = "0.7.0"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen-test = "0.3.31"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
