[package]
name = "simd-abstraction"
version = "0.8.0"
edition = "2021"
description = "Abstract SIMD instruction sets"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["simd"]
categories = ["no-std"]
readme = "README.md"
rust-version = "1.63"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
alloc = []
std = ["alloc"]
detect = ["std"]
unstable = []
