[package]
name = "simd-benches"
version = "0.8.0"
edition = "2021"
publish = false

[features]
unstable = ["simd-abstraction/unstable"]

[dependencies]
base64 = "0.13.0"
criterion = "0.3.6"
faster-hex = "0.6.1"
getrandom = { version = "0.2.7", features = ["js"] }
radix64 = "0.6.2"
rand = "0.8.5"
uuid = "1.1.2"
simd-abstraction = { path = "../simd-abstraction", version = "0.8.0" }
unicode-simd = { path = "../unicode-simd", version = "0.0.1" }
uuid-simd = { path = "../uuid-simd", version = "0.8.0" }
hex-simd = { path = "../hex-simd", version = "0.8.0" }
base64-simd = { path = "../base64-simd", version = "0.8.0" }

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "hex"
harness = false

[[bench]]
name = "base64"
harness = false
