[package]
name = "simd-benches"
version = "0.8.0-dev"
edition = "2021"
publish = false

[features]
default = ["detect", "std"]
unstable = [
    "base64-simd/unstable",
    "hex-simd/unstable",
    "unicode-simd/unstable",
    "uuid-simd/unstable",
]
detect = [
    "base64-simd/detect",
    "hex-simd/detect",
    "unicode-simd/detect",
    "uuid-simd/detect",
]
std = ["base64-simd/std", "hex-simd/std", "unicode-simd/std", "uuid-simd/std"]

[dependencies]
base64 = "0.13.0"
base64-simd = { path = "../base64-simd", version = "0.8.0-dev", default-features = false }
faster-hex = "0.6.1"
getrandom = { version = "0.2.7", features = ["js"] }
hex-simd = { path = "../hex-simd", version = "0.8.0-dev", default-features = false }
radix64 = "0.6.2"
rand = "0.8.5"
unicode-simd = { path = "../unicode-simd", version = "0.1.0-dev", default-features = false }
uuid = "1.1.2"
uuid-simd = { path = "../uuid-simd", version = "0.8.0-dev", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
criterion = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
criterion = { version = "0.4.0", default-features = false }

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "hex"
harness = false

[[bench]]
name = "base64"
harness = false
