[package]
name = "vsimd"
version = "0.9.0-dev"
edition = "2021"
description = "SIMD utilities"
license = "MIT"
repository = "https://github.com/Nugine/simd"
keywords = ["simd"]
categories = ["no-std"]
readme = "README.md"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
alloc = []
std = ["alloc"]
detect = ["std"]
unstable = []

[dev-dependencies]
const-str = "0.7"
rand = "0.10"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen-test = "0.3.34"
